--- a/PACKAGE.JSON
+++ b/PACKAGE.JSON
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/scraping2.js",
+    "start": "node src/index.js",
     "dev": "node src/scraping2.js"
   },
   "keywords": [],
